Mta example with spring